# PhilipsVolumeReader

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Example/: CMakeLists.txt  PhilipsVolumeReaderTest.cpp
PhilipsVolumeReader/: CMakeLists.txt  vtkPhilipsVolumeReader.cpp  vtkPhilipsVolumeReader.h
